--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,9 @@ analytics:
 author:
   name             : "Pandiyarajan A"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  bio              : "Open-minded Machine Learning Engineer, with a Professional Certificate in Data Science, thriving on implementing
+solutions for real-world problems and business needs. And an aspirant in the Field of Cognitive Science."
+  location         : "Coventry, United Kingdom"
   employer         :
   pubmed           : 
   googlescholar    : 
