--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Pandiyarajan A"
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   bio              : "Machine Learning Engineer"
   location         : "Coventry, United Kingdom"
   employer         :
